--- a/templates/base.html
+++ b/templates/base.html
@@ -2,37 +2,40 @@
     <head>
         <title>Simple San Francisco</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <script type="text/javascript" src="/static/js/bootstrap.js"></script>
         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="/static/js/bootstrap.js"></script>
+        <script type="text/javascript" src="/static/js/application.js"></script>
     </head>
     <body>
         <div class="container">
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <a class="brand" href="{{url_for("index")}}">Simple SF</a>
-                    <ul class="nav">
-                        <li><a href="{{url_for("new_plan")}}">New plan</a></li>
-                    </ul>
-
-                    <ul class="nav pull-right">
-                        <li><a href="#">{{current_user.email}}</a></li>
-                        {% if current_user.is_authenticated() %}
-                            <li><a href="{{url_for("logout")}}">Logout</a></li>
-                        {% else %}
-                            <li><a href="{{url_for("login")}}">Login</a></li>
-                        {% endif %}
-                    </ul>
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{{url_for("index")}}">Simple SF</a>
                 </div>
-            </div>
-            <ul>
+
+                <ul class="nav navbar-nav">
+                    <li><a href="{{url_for("new_plan")}}">New plan</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">{{current_user.email}}</a></li>
+                    {% if current_user.is_authenticated() %}
+                        <li><a href="{{url_for("logout")}}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{{url_for("login")}}">Login</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+
             {% for message in get_flashed_messages() %}
-            <li>{{message}}</li>
+            <div class="alert alert-info">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{message}}
+            </div>
             {% endfor %}
-            </ul>
-            <p>
+
             {% block body %}
             {% endblock %}
-            </p>
         </div>
     </body>
 </html>
