--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -1,11 +1,30 @@
 {% extends "base.html" %}
 
 {% block body %}
-<form method="post">
+<form method="post" class="form-horizontal" role="form">
+    <div class="form-group">
+        <label for="name" class="col-sm-2 control-label">Trip name</label>
+        <div class="col-sm-10">
+            <input type="text" name="name" class="form-control" placeholder="Type title of the trip">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="start_date" class="col-sm-2 control-label">Starts on</label>
+        <div class="col-sm-10">
+            <input type="date" name="start_date" class="form-control"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="end_date" class="col-sm-2 control-label">Ends on</label>
+        <div class="col-sm-10">
+            <input type="date" name="end_date" class="form-control"/>
+        </div>
+    </div>
     
-    <input type="text" name="name" placeholder="Type title of the trip"><br>
-    <input type="date" name="start_date"/>
-    <input type="date" name="end_date">
-    <input type="submit">
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Make this plan</button>
+        </div>
+    </div>
 </form>
 {% endblock %}
