--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
     <head>
         <title>Simple San Francisco</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/css/style.css">
         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="/static/js/bootstrap.js"></script>
         <script type="text/javascript" src="/static/js/application.js"></script>
