Categories button go to the page with activities. Activities not displayed yet.

--- a/templates/categories_display.html
+++ b/templates/categories_display.html
@@ -1,14 +1,8 @@
 { % extends 'base.html' %}
 
 {% block body %}
+Hello word
 <h1>{{plan.name}}</h1>
-{% for category_name in Category %}
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="btn-group">
-            <button type="button" class="btn btn-default">{{Category.name}}</button>
-        </div>
-    </div>
-</div>
+
 
 {% endblock %}
