--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,3 +27,36 @@
 .activity .body {
     color: #333;
 }
+
+.separate-button {
+    font-size: 21px; 
+    text-align: center;
+    width: 190px;
+    height: 150px; 
+}
+
+.subtitle {
+    margin: 30px 0px 60px 0px; 
+}
+
+.category_name {
+    margin-top: 50px; 
+}
+
+.categories_together {
+    max-width: 570px; 
+    margin-left: 270px; 
+}
+
+
+.green .green:hover {
+    background-color: #5cb85c;
+}
+
+
+
+
+
+
+
+
