--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,23 @@
     display: none;
 }
 
+.plan-activity {
+    width: 200px; 
+    background-color: lightblue;
+    margin-right: 10px; 
+    float: left;
+}
+
+.plan-activity a {
+    width: 200px; 
+}
+
+.plan-activity p {
+    padding: 10px; 
+    text-align: center; 
+}
+
+
 .toggled {
     background-color: lightblue; 
 }
