--- a/templates/plan.html
+++ b/templates/plan.html
@@ -14,6 +14,7 @@
                     {% if (timeline.id, order) in activities_by_timeslot %}
                         {% set activity = activities_by_timeslot[(timeline.id, order)] %}
                             <p>{{activity.activity.title}}</p>
+                            <img src="{{activity.activity.photo_url}}"/>
                     {% endif %}
                 </div>
             {% endfor %}
