--- a/templates/activities.html
+++ b/templates/activities.html
@@ -3,10 +3,10 @@
 {% block body %}
 <h1>{{plan.name}}</h1>
 <h3>{{category.name}} at {{timeslots[order]}}</h3>
-{% for activity in category.activities%}
+{% for activity in category.activities %}
 <div class="row activity">
   <div class="col-md-3 photo">
-    <img src="{{activity.photo_url}}">
+    <img src="/static/images/{{activity.photo_url}}">
   </div>
   <div class="col-md-9 body">
     <form method="POST">
