Added icons to categories

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,7 +6,7 @@
     {% for category in categories %}
      <div class="col-md-4">
        <a href="{{url_for("activities_for_timeslot", plan_id=plan.id, day=day, order=order,category_id=category.id)}}" class="btn btn-default a-10am separate-button turn_green">
-            <div class="category_name">{{category.name}}</div></a>
+            <div class="category_name">{{category.name}}<br><div class="{{category.symbol_url}} symbol"></div></div></a>
     </div>
     {% endfor %}
 </div>
