--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@
     font-size: 21px; 
     text-align: center;
     width: 190px;
-    height: 150px; 
+    height: 170px; 
 }
 
 .subtitle {
@@ -62,6 +62,10 @@
 
 .category_name {
     margin-top: 50px; 
+}
+
+.symbol {
+    margin-top: 14px; 
 }
 
 .categories_together {
