Activity title opens link to activity in new tab, when its clicked

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,10 +96,11 @@
     background-color: #5CA82A !important;
 }
 
+.add-button {
+    margin-left: 12px; 
+}
 
 
-
-
-
-
-
+.lead-title {
+    font-size: 20px; 
+}
