--- a/templates/activities.html
+++ b/templates/activities.html
@@ -11,7 +11,8 @@
   <div class="col-md-9 body">
     <form method="POST">
         <input type="hidden" name="activity_id" value="{{activity.id}}"/>
-        <p class="lead title">{{activity.title}} <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-time"></span> Plan this</button></p>
+        <a href="{{activity.website_url}}" target="_blank" class="lead-title">{{activity.title}}</a>
+        <button type="submit" class="btn btn-success add-button"><span class="glyphicon glyphicon-time"></span> Add</button>
     </form>
     <p>{{activity.description}}</p>
   </div>
