Set photo as background of first screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,4 +111,25 @@
 }
 
 
+.photo-background {
+    background-image: url("/static/background/best_golden_gate.jpg"); 
+    background-size: cover; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
