--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,40 @@
-{% extends 'base.html' %}
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Simple San Francisco</title>
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/css/style.css">
+        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="/static/js/bootstrap.js"></script>
+        <script type="text/javascript" src="/static/js/application.js"></script>
+    </head>
+    <body class="photo-background">
+        <div class="container">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{{url_for("index")}}">Simple SF</a>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{{url_for("plans")}}">My plans</a>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{{url_for("new_plan")}}">New plan</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">{{current_user.email}}</a></li>
+                    {% if current_user.is_authenticated() %}
+                        <li><a href="{{url_for("logout")}}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{{url_for("login")}}">Login</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+            {% for message in get_flashed_messages() %}
+            <div class="alert alert-info">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{message}}
+            {% endfor %}
+            {% block body %}
+            {% endblock %}
+    </body>
+</html>
