--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
+<div class="calendar">
 <form method="post" class="form-horizontal" role="form">
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Trip name</label>
@@ -27,4 +28,5 @@
         </div>
     </div>
 </form>
+</div>
 {% endblock %}
