--- a/templates/fb.html
+++ b/templates/fb.html
@@ -20,7 +20,7 @@
       // The response object is returned with a status field that lets the app know the current
       // login status of the person. In this case, we're handling the situation where they 
       // have logged in to the app.
-      createPermanentAccount(response.authResponse);
+      ensurePermanentAccount(response.authResponse);
       testAPI();
     } else if (response.status === 'not_authorized') {
       // In this case, the person is logged into Facebook, but not into the app, so we call
@@ -60,13 +60,11 @@
     });
   }
 
-  var createPermanentAccount = function (authResponse) {
+  var ensurePermanentAccount = function (authResponse) {
     console.log("Adding fb_id %s to database!", authResponse.userID);
-    $.post( "/signup", { fbId: authResponse.userID, fbAccessToken: authResponse.accessToken }, function(data) {
-      console.log("Result of /signup to fb_id %s, data %d", authResponse.userID, data);
+    $.post( "/signup_or_login", { fbId: authResponse.userID, fbAccessToken: authResponse.accessToken }, function(data) {
+      console.log("Result of /signup to fb_id %s, data %s", authResponse.userID, data);
     } );
-
-
   }
 </script>
 
@@ -74,4 +72,3 @@
   Below we include the Login Button social plugin. This button uses the JavaScript SDK to
   present a graphical Login button that triggers the FB.login() function when clicked. -->
 
-<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
