--- a/templates/plan.html
+++ b/templates/plan.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <h1>{{plan.name}}</h1>
-{% include 'fb.html' %}
+<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
 <h3>{{plan.start_date|datetime('%B %d')}} to {{plan.end_date|datetime('%B %d, %Y')}}</h3>
 {% for timeline, forecast in days %}
 <div class="panel panel-default">
