--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
                     <a class="navbar-brand" href="{{url_for("plans")}}">My plans</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">{{current_user.email}}</a></li>
+                    <li id="fb-face"></li>
                     {% if current_user.is_authenticated() %}
-                        <li><a class="logout" href="/logout">Logout</a></li>
+                        <li><a class="logout navbar-brand" href="/logout">Logout</a></li>
                     {% else %}
                         <li><a href="{{url_for("login")}}">Login</a></li>
                     {% endif %}
