--- a/templates/plans.html
+++ b/templates/plans.html
@@ -3,6 +3,7 @@
 {% for plan in plans %}
 <div class="post">
     <h2><a href="{{url_for("view_plan", id=plan.id)}}">{{plan.name}}</a></h2>
+    <h4><a href="#">See summary</a></h4>
 </div>
 {% endfor %}
 {% endblock %}
