Adding footer. Margin of link not styled YET

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,12 @@
                 <em class="main-title">Fast. Easy. Only best activities.</em>
             </div>
                 <a href="{{url_for("new_plan")}}" class="btn btn-default btn-lg first-button">Create plan</a>
+
+            <div id="footer">
+                <div class="navbar-header">
+                    <a class="navbar-brand aboutme" href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About me</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
