--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,6 +171,23 @@
 }
 
 
+#footer {
+   bottom:0;
+   width:100%;
+   height: 50px;   
+   background: #e7e7e7;
+   text-align: left;
+    position: fixed;
+    bottom: 0;
+    left:0
+}
+
+
+.aboutme {
+    margin-right: 200px;
+    color: #5e5e5e;
+}
+
 
 
 
