--- a/templates/base.html
+++ b/templates/base.html
@@ -38,5 +38,10 @@
             {% endfor %}
             {% block body %}
             {% endblock %}
+        <div id="footer">
+            <div class="navbar-header">
+                <a class="navbar-brand aboutme" href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About me</a>
+            </div>
+        </div>
     </body>
 </html>
