--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,26 @@
+.upper-navbar {
+    width: 100%;
+    background-color: #f8f8f8;
+}
+
+#footer {
+   bottom:0;
+   width:100%;
+   height: 50px;   
+   background: #e7e7e7;
+   text-align: left;
+    position: fixed;
+    bottom: 0;
+    left:0
+}
+
+
+.aboutme {
+    margin-right: 200px;
+    color: #5e5e5e;
+}
+
+
 .plan-categories {
     display: none;
 }
@@ -120,6 +143,7 @@
     border: 1px solid transparent;
     background-color: #e7e7e7;
     margin: -2px 190px;
+    color: #5e5e5e;
 }
 
 
@@ -171,22 +195,8 @@
 }
 
 
-#footer {
-   bottom:0;
-   width:100%;
-   height: 50px;   
-   background: #e7e7e7;
-   text-align: left;
-    position: fixed;
-    bottom: 0;
-    left:0
-}
 
 
-.aboutme {
-    margin-right: 200px;
-    color: #5e5e5e;
-}
 
 
 
