--- a/templates/index.html
+++ b/templates/index.html
@@ -26,20 +26,20 @@
           </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">            
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="{{url_for("index")}}">Simple SF</a>
-                </div>
+            <div class="navbar-header">
+                <a class="navbar-brand brand-name" href="{{url_for("index")}}">Simple SF</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{url_for("plans")}}">My plans</a>
                 </div>
-                <ul class="nav navbar-nav navbar-right">
-                    <li id="fb-face"></li>
+                <li id="fb-face"></li>
                     {% if current_user.is_authenticated() %}
                         <li><a class="logout navbar-brand" href="/logout">Logout</a></li>
                     {% else %}
                         <li><a href="{{url_for("login")}}">Login</a></li>
                     {% endif %}
-                </ul>
+            </ul>
             {% for message in get_flashed_messages() %}
             <div class="alert alert-info">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
