--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,13 @@
         <title>Simple San Francisco</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link rel="stylesheet" href="/static/css/style.css">
+        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="/static/js/bootstrap.js"></script>
         <script type="text/javascript" src="/static/js/application.js"></script>
     </head>
-    <body>
+    <body class="{{self|quoted}}">
         {% include 'fb.html' %}
         <div class="container">
             <nav class="navbar navbar-default upper-navbar" role="navigation">
@@ -25,16 +27,19 @@
                     <div class="navbar-header">
                         <a class="navbar-brand brand-name" href="{{url_for("index")}}">Simple SF</a>
                     </div>
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About me</a></li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="{{url_for("plans")}}">My plans</a>
-                        </div>
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="{{url_for("new_plan")}}">New plan</a>
-                        </div>
+                        <li>
+                            <a href="{{url_for("plans")}}">My plans</a>
+                        </li>
+                        <li>
+                            <a href="{{url_for("new_plan")}}">New plan</a>
+                        </li>
                         <li id="fb-face"></li>
                         {% if current_user.is_authenticated() %}
-                            <li><a class="logout navbar-brand" href="{{url_for("logout")}}">Logout</a></li>
+                            <li><a href="{{url_for("logout")}}">Logout</a></li>
                         {% else %}
                             <li><a href="{{url_for("login")}}">Login</a></li>
                         {% endif %}
@@ -48,10 +53,6 @@
             </nav>
             {% block body %}
             {% endblock %}
-        <div id="footer">
-            <div class="navbar-header">
-                <a class="navbar-brand aboutme" href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About me</a>
-            </div>
-        </div>
+    
     </body>
 </html>
