--- a/templates/index.html
+++ b/templates/index.html
@@ -1,64 +1,20 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Simple San Francisco</title>
-        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/css/style.css">
-        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
-        <script type="text/javascript" src="/static/js/bootstrap.js"></script>
-        <script type="text/javascript" src="/static/js/application.js"></script>
-    </head>
-    <body class="photo-background">
-        {% include 'fb.html' %}
-        <div class="container">
+{% extends 'base.html' %}
+{% block body %}
 
-
-        <nav class="navbar navbar-default upper-navbar" role="navigation">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+<div class="row">
+    <div class="col-md-offset-7 col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body hero">
+            <h1>Plan a San Francisco Trip</h1>
+            <h3>Fast. Easy. Only best activities.</h3>
+            <a href="{{url_for("new_plan")}}" class="btn btn-default btn-lg">Create Your Plan Now!</a>
           </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">            
-            <div class="navbar-header">
-                <a class="navbar-brand brand-name" href="{{url_for("index")}}">Simple SF</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="{{url_for("plans")}}">My plans</a>
-                </div>
-                <li id="fb-face"></li>
-                    {% if current_user.is_authenticated() %}
-                        <li><a class="logout navbar-brand" href="/logout">Logout</a></li>
-                    {% else %}
-                        <li><a href="{{url_for("login")}}">Login</a></li>
-                    {% endif %}
-            </ul>
-            {% for message in get_flashed_messages() %}
-            <div class="alert alert-info">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{message}}
-            {% endfor %}
-        </nav>
-
-            <div class="main-content-first">
-                <div class="titles">
-                    <em class="very-main-title">Plan San Francisco trip</em>
-                    <em class="main-title">Fast. Easy. Only best activities.</em>
-                </div>
-                <a href="{{url_for("new_plan")}}" class="btn btn-default btn-lg first-button">Create plan</a>
-                <div id="footer">
-                    <div class="navbar-header">
-                        <a class="navbar-brand aboutme" href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About me</a>
-                    </div>
-                </div>
-            <div>
-        
         </div>
-    </body>
-</html>
+    </div>
+</div>
+
+
+
+
+{% endblock %}
+ 
